# FLiCR

./: .gitignore  3dpcc  CMakeLists.txt  LICENSE  README.md  config.yaml  flicr  flicr.pc.in
cmake/: boost.cmake  cxxopts.cmake  ffmpeg.cmake  opencv.cmake  opengl.cmake  openmp.cmake  pcl.cmake  realsense.cmake  rosbag.cmake  spdlog.cmake  yaml-cpp.cmake
example/: CMakeLists.txt  Lloyd_Quantizer.cc  Tile_Subsampling.cc  Uniform_Tile_Quantizer.cc  Uniform_Tile_Quantizer2.cc  UniiTileQuant_Downsample.cc  bag2ply.cc  compressor_xyzi2xyz.cc  cv_interpolator.cc  d435i_example.cc  d435i_inspection.cc  decompressor_xyz.cc  dict_dec.cc  dict_enc.cc  dict_exp.cc  direct_bitstream.cc  direct_compress.cc  direct_pcl_octree.cc  exp_ir_conversion.cc  exp_ri_nri_comp.cc  generate_rechdl64_dataset.cc  generate_ri_dataset.cc  h264_vis.cc  hdl64_example.cc  hdl64_h264.cc  hdl64_hwh264.cc  hdl64_io.cc  hdl64_mjpeg.cc  hdl64_optflow.cc  hdl64_pcl_visualization.cc  hdl64_pred.cc  hdl64_raw2plys.cc  hdl64_ripc_visualization.cc  kitti_bs.cc  kitti_example.cc  kitti_qp_example.cc  kitti_raw2dataset.cc  kitti_raw2ply.cc  kitti_ri_metrics.cc  kitti_vcodec_metrics.cc  (+41 more)
example/experiments/: exp_generate_interpolated_dataset.cc  exp_generate_ris.cc  exp_ir_conversion.cc  exp_lz77_rle_comp.cc  exp_others_qaulity.cc  exp_pcl_octreecomp.cc  exp_ri_effect.cc  exp_ri_nri.cc  exp_risubsamp_metrics.cc  exp_rle.cc  exp_subsample.cc  exp_vcodec_qps.cc  exp_vid_compratio.cc
example/explore/: interpolation_comparisons.cc  interpolator_test.cc  ri_interpolator_test.cc  ri_interpolator_test2.cc  super_resolution_exp.cc
exp/: cv_inter.py  cv_inter_2x.py  flicr_comp.py  inter.py  inter_2x.py  orig.py  quality.py  run.sh  size.py
flicr_include/: CMakeLists.txt  defs.h  downsampler.h  lloyd.h  metric_func.h  metrics_func.h  pc_reader.h  pc_writer.h  ri_converter.h  ri_interpolator.h  tiler.h  types.h  visualizer.h
flicr_include/compressor/: boostzip.h  runlength_compressor.h
include/: CMakeLists.txt  bag_reader.h  boostzip.h  decoder.h  defs.h  encoder.h  example.h  hdl64_frame_reader.h  hdl64_pc_reader.h  hdl64_ri_converter.h  metric.h  oxts_reader.h  pc_predictor.h  pc_reader.h  pc_writer.h  pcl_utils.h  ri_converter.h  ros_bag_reader.h  runlength_compressor.h  types.h  utils.h  visualizer.h
include/compressor/: decoder.h  encoder.h
python/: README.md  draco_dec.sh  draco_enc.sh  drawer.py  load_dataset.py  load_frame_tracklets.py  main.py  real_time_spatio.py  requirements.txt  tmc_dec.sh  tmc_enc.sh
resources/: README
scripts/: collect_histogram_data.py  compressor_xyzi2xyz.sh  decompressor_xyz.sh  dict_dec.sh  dict_enc.sh  draco_xyz.py  etc.sh  interpolations.sh  other_compressions.sh  pc_downsampler.sh  pcl_dec.sh  pcl_enc.sh  rle_dec.sh  rle_enc.sh  tile_test.sh  tmc13_xyz.py  visualizers.sh
source/: CMakeLists.txt  bag_reader.cc  boostzip.cc  decoder.cc  downsampler.cc  encoder.cc  hdl64_pc_reader.cc  hdl64_ri_converter.cc  lloyd.cc  oxts_reader.cc  pc_predictor.cc  pc_reader.cc  pc_writer.cc  ri_converter.cc  ros_bag_reader.cc  runlength_compressor.cc  tiler.cc  visualizer.cc
source/compressor/: decoder.cc  encoder.cc
